--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
 	<title>Where's WallE</title>
 	<link rel="stylesheet" href="src/main.css" />
-	
+	<link rel="stylesheet" href="src/fa/css/font-awesome.css" />
   	
 </head>
 <body>
-	<div id='title-container'><h1 class='title'>Where's WallE</h1></div> 
+	<div id='title-container'><h1 class='title'>Where's Wall-E</h1></div>
 
-	<div id='container'</div>	 
+
+	<div id='container'></div>	 
+
+	<div class='info'>
+	  <a href='http://aliayoub.com'>
+	    <p class='about' target='_blank'>created by Ali Ayoub</p>
+	  </a>
+	  <p class='copyright'>All artwork and the name Wall-E are property of 
+	    <a href='http://www.pixar.com/'>Pixar</a>
+	  </p>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   	<script src='build/react.js'></script>
