--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Where's WallE</title>
 	<link rel="stylesheet" href="src/main.css" />
-	<link rel="stylesheet" href="src/fa/css/font-awesome.css" />
-  	
+	<link rel="stylesheet" href="src/fa/css/font-awesome.min.css" />
+  	<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 <body>
 	<div id='title-container'><h1 class='title'>Where's Wall-E</h1></div>
