--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Where's WallE</title>
 	<link rel="stylesheet" href="src/main.css" />
 	<link rel="stylesheet" href="src/fa/css/font-awesome.min.css" />
-  	<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+  	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 <body>
 	<div id='title-container'><h1 class='title'>Where's Wall-E</h1></div>
@@ -17,7 +17,7 @@
 	    <p class='about' target='_blank'>created by Ali Ayoub</p>
 	  </a>
 	  <p class='copyright'>All artwork and the name Wall-E are property of 
-	    <a href='http://www.pixar.com/'>Pixar</a>
+	    <a href='http://www.pixar.com/'> Pixar</a>
 	  </p>
 	</div>
 
