--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Where's WallE</title>
 	<link rel="stylesheet" href="src/main.css" />
-	<link rel="stylesheet" href="src/fa/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 <body>
@@ -12,6 +12,14 @@
 
 	<div id='container'></div>	 
 
+	<div className='info'>
+	  <a href='http://aliayoub.com'>
+	    <p className='about' target='_blank'>created by Ali Ayoub</p>
+	  </a>
+	  <p className='copyright'>All artwork and the name Wall-E are property of 
+	    <a href='http://www.pixar.com/'> Pixar</a>
+	  </p>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   	<script src='build/react.js'></script>
