--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 	<div id='container'></div>	 
 
-	<div className='info'>
+	<div class='info'>
 	  <a href='http://aliayoub.com'>
-	    <p className='about' target='_blank'>created by Ali Ayoub</p>
+	    <p class='about' target='_blank'>created by Ali Ayoub</p>
 	  </a>
-	  <p className='copyright'>All artwork and the name Wall-E are property of 
+	  <p class='copyright'>All artwork and the name Wall-E are property of 
 	    <a href='http://www.pixar.com/'> Pixar</a>
 	  </p>
 	</div>
