some margin work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    <p class='about' target='_blank'>created by Ali Ayoub</p>
 	  </a>
 	  <p class='copyright'>All artwork and the name Wall-E are property of 
-	    <a href='http://www.pixar.com/'> Pixar</a>
+	    <a href='http://www.pixar.com/' class='pixar'> Pixar</a>
 	  </p>
 	</div>
 
