removed images folder and other cleanup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Where's WallE</title>
+	<title>Where's Wall-E</title>
 	<link rel="stylesheet" href="src/main.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
